XD-523: allow hyphens in module/stream names and polish